<resources>
    <string name="app_name">toast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">시작하기</string>
    <string name="my_page">마이페이지</string>
    <string name="hot_topic">핫토픽</string>
    <string name="news">뉴스</string>
    <string name="search">검색</string>
    <string name="news_title">뉴스제목</string>
    <string name="todo">TODO</string>
    <string name="real_time_hot_topic">실시간 핫토픽</string>
    <string name="scrap_news">스크랩 한 뉴스</string>
    <string name="recent_news">최근 본 뉴스</string>
    <string name="setting_like">관심분야 설정</string>
    <string name="logout">로그아웃</string>
    <string name="exit">회원탈퇴</string>
    <string name="setting_function">기능 설정</string>
    <string name="scrap">스크랩</string>
    <string name="recent">최근 본 기사</string>
    <string name="intro_withdraw">정말 탈퇴하시겠어요?</string>
    <string name="intro_withdraw_description1">탈퇴 시 회원님을 위해 준비한 다양한 맞춤 정보가</string>
    <string name="intro_withdraw_description2">즉시 사라져요</string>
    <string name="confirm_withdraw">정말 탈퇴하시겠어요?</string>
    <string name="withdraw_ok">탈퇴</string>
    <string name="withdraw_cancel">취소</string>
    <string name="server_client_id">219000109911-r9jolu7n6nnbsc5gl1p69j34msvdvuup.apps.googleusercontent.com</string>
    <string name="next">다음</string>
    <string name="last">마지막</string>
</resources>